# itmo

./: LICENSE  README.md
algo-labs/lab1 - sort binsearch/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp
algo-labs/lab10 - matching/: a.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
algo-labs/lab11 - flows/: a.cpp  b.cpp  c.cpp
algo-labs/lab12 - mincost-maxflow/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
algo-labs/lab13 - math-crypto/: a.cpp  b.py  c.cpp  d.cpp  e.cpp  f.cpp
algo-labs/lab2 - stack queue dsu/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp
algo-labs/lab3 - dp/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp
algo-labs/lab4 - segment tree/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp
algo-labs/lab5 - search tree/: a.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp
algo-labs/lab6 - tree queries/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp
algo-labs/lab7 - dfs mst/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  h.cpp  i.cpp  j.cpp  k.cpp
algo-labs/lab8 - minpath games/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp
cxx-advanced/: lecture optional-variant.cpp  lecture signals.cpp  lecture unicode.cpp  readme.txt
haskell/hw0/: hw0.cabal
haskell/hw0/app/: Main.hs
haskell/hw0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
haskell/hw1/: hw1.cabal
haskell/hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
haskell/hw2/: hw2.cabal
haskell/hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
haskell/hw3/: hw3.cabal
haskell/hw3/app/: Main.hs
haskell/hw3/src/HW3/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
linalg-labs/: lab1.py
mpp/casn/: README.md
opt-methods/: .gitignore  readme.txt
trans-methods/lab2/: CMakeLists.txt  README.md
trans-methods/lab2/include/: exception.h  node.h  nodes.h  structs.h  tokenizer.h
trans-methods/lab2/src/: graphviz.cpp  main.cpp  parser.cpp  tokenizer.cpp
trans-methods/lab2/src/nodes/: A.cpp  B.cpp  E.cpp  F.cpp  G.cpp  L.cpp  N.cpp  S.cpp  T.cpp
trans-methods/lab2/tests/: tests.py
trans-methods/lab4/: CMakeLists.txt  README.md
trans-methods/lab4/examples/calc/: CMakeLists.txt  calc.g  test.txt
trans-methods/lab4/examples/calc/include/: node.h  user_nodes.h  user_tokens.h
trans-methods/lab4/examples/calc/src/: main.cpp  user_nodes.cpp  user_tokens.cpp
trans-methods/lab4/examples/kotlin/: CMakeLists.txt  kotlin.g  test.txt
trans-methods/lab4/examples/kotlin/include/: exception.h  graph.h  user_nodes.h  user_tokens.h
trans-methods/lab4/examples/kotlin/src/: main.cpp  user_nodes.cpp  user_tokens.cpp
trans-methods/lab4/examples/redist/: tokenizer.h  tokens.h
trans-methods/lab4/examples/string_length/: CMakeLists.txt  string.txt  string_length.g
trans-methods/lab4/examples/string_length/include/: user_nodes.h  user_tokens.h
trans-methods/lab4/examples/string_length/src/: main.cpp  user_nodes.cpp  user_tokens.cpp
trans-methods/lab4/include/: codegen.h  grammar.h  graph.h  node.h  parser.h  tokenizer.h  tokens.h  utils.h
trans-methods/lab4/src/: codegen.cpp  grammar.cpp  graphviz.cpp  main.cpp  parser.cpp  tokenizer.cpp  utils.cpp
(+668 files in other folders)
