cabal-version:      2.4
name:               hw1
version:            0.1.0.0

author:             letstatt

executable hw1
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010


library
  hs-source-dirs:      src
  exposed-modules:     HW1.T1, HW1.T2, HW1.T3, HW1.T4, HW1.T5, HW1.T6, HW1.T7
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
