cabal-version:      2.4
name:               hw2
version:            0.1.0.0

author:             letstatt

executable hw2
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010


library
  hs-source-dirs:      src
  exposed-modules:     HW2.T1, HW2.T2, HW2.T3, HW2.T4, HW2.T5, HW2.T6
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
